--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <spring.version>2.2.6.RELEASE</spring.version>
         <powermock.version>2.0.2</powermock.version>
         <jackson.version>2.13.2</jackson.version>
+        <jackson-databind.version>2.13.2.1</jackson-databind.version> <!-- Нужна отдельная версия из-за уязвимости CVE-2020-36518 -->
     </properties>
 
     <dependencies>
@@ -56,7 +57,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
+            <version>${jackson-databind.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/junit/junit -->
