--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,10 @@
 
     <properties>
         <java.version>17</java.version>
+        <jackson.version>2.17.0</jackson.version>
+
+        <!--TESTS-->
         <powermock.version>2.0.2</powermock.version>
-        <jackson.version>2.14.1</jackson.version>
         <junit.version>5.9.2</junit.version>
         <mockito.version>5.0.0</mockito.version>
 
